--- a/Reto1/src/main/resources/static/iniciar_secion.html
+++ b/Reto1/src/main/resources/static/iniciar_secion.html
@@ -21,7 +21,11 @@
 <body>
     <div class="container mt-5 jumbotron">
         <form action="">
-            <h1 class="text-center mb-4">Empresa XYZ</h1>
+            <div id="centrar">
+                <img src="assets/img/logo_albahaca.png" width="75%" height="25%">
+            </div>
+                <br>
+                <br>
             <h3 class="text-center mb-4">Inicio de Seción</h3>
 
 
